--- a/game.html
+++ b/game.html
@@ -7,9 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="./style.css" rel="stylesheet">
-    <link href="./runner.css" rel="stylesheet">
+    <link href="./game.css" rel="stylesheet">
 
-    <title>Runner</title>
+    <title>Game</title>
 </head>
 
 <body>
@@ -27,8 +27,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link" aria-current="page" href="./index.html">Home</a>
-                    <a class="nav-link active" href="./runner.html">Game!</a>
+                    <a class="nav-link" href="./index.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="./game.html">Game!</a>
                     <a class="nav-link" href="#">Pricing</a>
                     <a class="nav-link disabled">Disabled</a>
                 </div>
@@ -36,14 +36,34 @@
         </div>
     </nav>
 
-    <div id="container">
+    <audio src="./audios/right.mp3" id="rightSound"></audio>
+    <audio src="./audios/wrong.mp3" id="wrongSound"></audio>
+
+
+    <div class="content">
+        <h1>Escape Room</h1>
+        <p>Enter the secret code below to escape from the room:</p>
+        <p>Secret Code: <input type="password" id="passcode_input"></p>
+        <button type="button" class="btn btn-primary" id="checkInput">Check input</button>
     </div>
 
-    <div class="controlls">
-        <p>Jump: <b>CLICK</b> or <b>SPACE</b> or <b>UP</b> or <b>W</b> (Hold to jump higher)</p>
-        <p>(<b>TOUCH</b> works as well, but the game it's not responsive).</p>
-        <p></p>
-    </div>
+    <table class="clues">
+        <tr>
+            <th><h3>CLUES</h3></th>
+        </tr>
+    </table>
+    <table class="clues">
+        <tr>
+            <td class="clue" id="clue1">a</td>
+            <td class="clue" id="clue2">a</td>
+        </tr>
+        <tr>
+            <td class="clue" id="clue3">a</td>
+            <td class="clue" id="clue4">a</td>
+        </tr>
+    </table>
+
+    <script src="./scripts/game.js"></script>
 
     <div class="footer fixed-bottom">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
@@ -57,8 +77,6 @@
     </div>
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/sketch.js/1.0.0/sketch.min.js"></script>
-    <script src="./scripts/runner.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
         crossorigin="anonymous"></script>
