--- a/race.html
+++ b/race.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -7,13 +8,23 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="./style.css" rel="stylesheet">
-    <link href="./runner.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press+Start+2P" />
+    <link href="./race.css" rel="stylesheet">
+    <title>Race</title>
 
-    <title>Runner</title>
+    <script>
+        window.console = window.console || function (t) { };
+    </script>
+
+    <script>
+        if (document.location.search.match(/type=embed/gi)) {
+            window.parent.postMessage("resize", "*");
+        }
+    </script>
 </head>
 
-<body>
 
+<body>
     <nav class="navbar navbar-expand-lg bg-primary " data-bs-theme="dark">
         <div class="container-fluid container">
             <a class="navbar-brand" href="#">
@@ -36,14 +47,38 @@
         </div>
     </nav>
 
-    <div id="container">
+
+    <div id="game">
+        <div id="road">
+            <div id="cloud"></div>
+            <div id="hero"></div>
+        </div>
+
+        <div id="hud">
+            <span id="time" class="topUI">0</span>
+            <span id="score" class="topUI">0</span>
+            <span id="lap" class="topUI">0'00"000</span>
+            <span id="tacho">0</span>
+        </div>
+
+        <div id="home">
+            <h1>Dash</h1>
+            <p id="text"></p>
+
+            <div id="highscore"></div>
+        </div>
     </div>
 
-    <div class="controlls">
-        <p>Jump: <b>CLICK</b> or <b>SPACE</b> or <b>UP</b> or <b>W</b> (Hold to jump higher)</p>
-        <p>(<b>TOUCH</b> works as well, but the game it's not responsive).</p>
-        <p></p>
+    <div id="controls">
+        <span><span>C</span>insert coin</span>
+        <span><span>M</span>mute</span>
+        <span><span>&lt;</span><span>&gt;</span>move</span>
+        <span><span>&lt;</span><span>&gt;</span>accelerate</span>
     </div>
+
+    <script src="./scripts/race.js"></script>
+    <script src="./scripts/race-render.js" id="render-js"></script>
+    <script src="javascript/null.js"></script>
 
     <div class="footer fixed-bottom">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
@@ -57,8 +92,6 @@
     </div>
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/sketch.js/1.0.0/sketch.min.js"></script>
-    <script src="./scripts/runner.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
         crossorigin="anonymous"></script>
