--- a/win.html
+++ b/win.html
@@ -26,10 +26,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                    <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                     <a class="nav-link" href="./room1.html">Game!</a>
                     <a class="nav-link" href="#">Pricing</a>
-                    <a class="nav-link" href="./secret.html">Secret Page</a>
+                    <a class="nav-link active" href="./secret.html">Secret Page</a>
                 </div>
             </div>
         </div>
