--- a/room4.html
+++ b/room4.html
@@ -7,8 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="./style.css" rel="stylesheet">
-    
-    <title>INDEX</title>
+    <link href="./game.css" rel="stylesheet">
+
+    <title>Game</title>
 </head>
 
 <body>
@@ -26,16 +27,59 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-                    <a class="nav-link" href="./room1.html">Game!</a>
+                    <a class="nav-link" href="./index.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="./room1.html">Game!</a>
                     <a class="nav-link" href="#">Pricing</a>
                     <a class="nav-link" href="./secret.html">Secret Page</a>
+
                 </div>
             </div>
         </div>
     </nav>
 
+    <audio src="./audios/right.mp3" id="rightSound"></audio>
+    <audio src="./audios/wrong.mp3" id="wrongSound"></audio>
 
+
+    <div class="content">
+        <h1>Escape Room</h1>
+        <p>Enter the secret code below to escape from the room:</p>
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Secret Code:</span>
+            <input type="text" class="form-control" id="passcode_input" aria-label="Sizing example input"
+                aria-describedby="inputGroup-sizing-default">
+        </div>
+        <button type="button" class="btn btn-primary" id="checkInput">Check input</button>
+    </div>
+
+    <div class="tabella">
+        <h2>CLUES</h2>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">First</th>
+                    <th scope="col">Last</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                </tr>
+            </tbody>
+    </div>
+
+
+
+    <script src="./scripts/main.js"></script>
+    <script src="./scripts/room4.js"></script>
 
     <div class="footer fixed-bottom">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
@@ -49,11 +93,12 @@
     </div>
 
 
-
-    <script src="./scripts/main.js"></script>
-    
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+        integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
