--- a/obsolescenza.html
+++ b/obsolescenza.html
@@ -7,7 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="./style/style.css" rel="stylesheet">
-    <link href="./style/secret.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico"/>
 
@@ -39,7 +38,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="./room1.html">Game!</a>
+                        <a class="nav-link" href="./room1.html">Game!</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" id="secretPage">Secret Page</a>
@@ -49,19 +48,60 @@
         </div>
     </nav>
 
-    <div class="content">
-        <h1>Have you finished the escape room?</h1>
-
-        <div class="input-group mb-3">
-            <span class="input-group-text" id="inputGroup-sizing-default">Insert the password</span>
-            <input type="text" class="form-control" aria-label="Sizing example input"
-                aria-describedby="inputGroup-sizing-default" id="passcode_input">
-            <button class="btn btn-outline-primary" type="button" id="checkInput">Button</button>
+    <div class="container content">
+        <h1>L'obsolescenza informatica</h1>
+        <p>
+            L'obsolescenza informatica è un problema sempre più rilevante nella società moderna. Con il continuo
+            avanzamento
+            della tecnologia, molti produttori di dispositivi informatici cercano di incentivare il consumo di nuovi
+            dispositivi attraverso la produzione di prodotti che diventano rapidamente obsoleti, spingendo così gli
+            utenti
+            ad acquistare nuovi dispositivi più recenti.
+        </p>
+        <p>
+            Il problema principale con l'obsolescenza informatica è che la maggior parte dei dispositivi informatici non
+            è
+            facilmente riciclabile. Quando i dispositivi obsoleti finiscono nei rifiuti, possono causare gravi problemi
+            ambientali. I componenti elettronici dei dispositivi informatici contengono una vasta gamma di sostanze
+            tossiche, che possono contaminare le acque sotterranee e causare gravi problemi per la salute umana e
+            l'ecosistema.
+        </p>
+        <div class="immagine">
+        <img src="./images/discarica.jpg">
         </div>
+        <p>
+            Inoltre, la produzione di nuovi dispositivi informatici richiede una quantità significativa di risorse
+            naturali,
+            come minerali, energia e acqua. L'obsolescenza informatica, quindi, non solo causa danni ambientali diretti
+            attraverso lo smaltimento inappropriato dei dispositivi obsoleti, ma anche attraverso l'uso eccessivo di
+            risorse
+            naturali necessarie per produrre nuovi dispositivi.
+        </p>
+        <p>
+            Per combattere l'obsolescenza informatica e ridurre l'impatto ambientale dei dispositivi informatici, è
+            necessario sviluppare tecnologie sostenibili, ad esempio attraverso la progettazione di dispositivi a basso
+            consumo energetico e l'utilizzo di materiali ecologici e riciclabili. Inoltre, gli utenti dovrebbero essere
+            incoraggiati a mantenere i propri dispositivi per il maggior tempo possibile e a riciclarli in modo
+            responsabile
+            quando non sono più utilizzabili.
+        </p>
+        <div class="immagine">
+            <img src="./images/rifiuti-elettronici.jpg">
+        </div>
+        <p>
+            In conclusione, l'obsolescenza informatica rappresenta una minaccia significativa per l'ambiente e la salute
+            umana. È necessario adottare misure concrete per ridurre l'impatto ambientale dei dispositivi informatici,
+            sia
+            attraverso la progettazione di tecnologie sostenibili, sia attraverso il sostegno di pratiche di consumo
+            responsabile da parte degli utenti. Solo in questo modo potremo preservare il nostro pianeta per le future
+            generazioni.
+        </p>
     </div>
 
 
-    <footer class="fixed-bottom py-3 pt-5">
+
+
+    <footer class="py-3 pt-5">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary"><i class="fa fa-home me-1" aria-hidden="true"></i></i>Home</a></li>
             <li class="nav-item"><a href="https://www.instagram.com/_giuseppe.aiello_/" class="nav-link px-2 text-body-secondary"><i class="fa fa-instagram me-1" aria-hidden="true"></i>Instagram</a></li>
@@ -74,7 +114,9 @@
     </footer>
 
 
-    <script src="./scripts/secret.js"></script>
+
+
+    <script src="./scripts/main.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
