--- a/riciclo.html
+++ b/riciclo.html
@@ -7,7 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="./style/style.css" rel="stylesheet">
-    <link href="./style/secret.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico"/>
 
@@ -39,7 +38,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="./room1.html">Game!</a>
+                        <a class="nav-link" href="./room1.html">Game!</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" id="secretPage">Secret Page</a>
@@ -49,19 +48,62 @@
         </div>
     </nav>
 
-    <div class="content">
-        <h1>Have you finished the escape room?</h1>
-
-        <div class="input-group mb-3">
-            <span class="input-group-text" id="inputGroup-sizing-default">Insert the password</span>
-            <input type="text" class="form-control" aria-label="Sizing example input"
-                aria-describedby="inputGroup-sizing-default" id="passcode_input">
-            <button class="btn btn-outline-primary" type="button" id="checkInput">Button</button>
+    <div class="container content">
+        <h1>Il riciclaggio dell'hardware</h1>
+        <p>
+            Il riciclo dell'hardware è un modo importante per ridurre l'impatto ambientale dei dispositivi informatici
+            che
+            utilizziamo ogni giorno. La maggior parte delle persone sostituisce regolarmente i propri computer, telefoni
+            e
+            tablet con nuovi modelli, ma spesso non sanno cosa fare con i vecchi dispositivi. Invece di buttarli via,
+            esistono diverse opzioni per il riciclo dell'hardware.
+        </p>
+        <p>
+            In primo luogo, è possibile donare gli apparecchi elettronici ancora funzionanti a organizzazioni che li
+            utilizzano per scopi educativi o sociali. Ad esempio, molte scuole e biblioteche sono alla ricerca di
+            computer
+            usati per i loro laboratori informatici. Ci sono anche organizzazioni no-profit che raccolgono dispositivi
+            elettronici e li donano a famiglie bisognose.
+        </p>
+        <div class="immagine">
+            <img src="./images/riciclo-hardware.jpg">
         </div>
+        <p>
+            In secondo luogo, è possibile vendere i propri dispositivi usati. Ci sono molti siti web e negozi
+            specializzati
+            in hardware usato dove è possibile vendere o scambiare i propri dispositivi. Questa opzione non solo riduce
+            gli
+            sprechi, ma può anche essere un modo per guadagnare qualche soldo extra.
+        </p>
+        <p>
+            In terzo luogo, esiste la possibilità di riciclare i propri dispositivi attraverso programmi di recupero
+            offerti
+            dai produttori. Molte aziende come Apple, Samsung e Dell offrono programmi di riciclaggio gratuiti o a basso
+            costo per i propri prodotti. In questo modo, i materiali preziosi come l'oro, il rame e l'alluminio possono
+            essere recuperati e riutilizzati.
+        </p>
+        <div class="immagine">
+            <img src="./images/riutilizzo-hardware.jpg">
+        </div>
+        <p>
+            Infine, è possibile portare i propri dispositivi elettronici presso centri di riciclaggio dedicati. Questi
+            centri smantellano gli apparecchi elettronici in modo sicuro e recuperano i materiali preziosi per la
+            creazione
+            di nuovi prodotti. È importante verificare che il centro di riciclaggio scelto sia accreditato e rispetti
+            gli
+            standard ambientali.
+        </p>
+        <p>
+            In sintesi, il riciclo dell'hardware è un modo importante per ridurre l'impatto ambientale dei dispositivi
+            informatici. Donare, vendere, riciclare e portare i propri dispositivi presso centri di riciclaggio dedicati
+            sono tutte opzioni valide per ridurre gli sprechi e preservare le risorse naturali del nostro pianeta.
+        </p>
     </div>
 
 
-    <footer class="fixed-bottom py-3 pt-5">
+
+
+    <footer class="py-3 pt-5">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary"><i class="fa fa-home me-1" aria-hidden="true"></i></i>Home</a></li>
             <li class="nav-item"><a href="https://www.instagram.com/_giuseppe.aiello_/" class="nav-link px-2 text-body-secondary"><i class="fa fa-instagram me-1" aria-hidden="true"></i>Instagram</a></li>
@@ -74,7 +116,8 @@
     </footer>
 
 
-    <script src="./scripts/secret.js"></script>
+
+    <script src="./scripts/main.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
