--- a/obsolescenza.html
+++ b/obsolescenza.html
@@ -8,7 +8,7 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="./style/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
 
     <title>INDEX</title>
 </head>
@@ -67,7 +67,7 @@
             l'ecosistema.
         </p>
         <div class="immagine">
-        <img src="./images/discarica.jpg">
+            <img src="./images/discarica.jpg">
         </div>
         <p>
             Inoltre, la produzione di nuovi dispositivi informatici richiede una quantità significativa di risorse
@@ -103,11 +103,17 @@
 
     <footer class="py-3 pt-5">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary"><i class="fa fa-home me-1" aria-hidden="true"></i></i>Home</a></li>
-            <li class="nav-item"><a href="https://www.instagram.com/_giuseppe.aiello_/" class="nav-link px-2 text-body-secondary"><i class="fa fa-instagram me-1" aria-hidden="true"></i>Instagram</a></li>
-            <li class="nav-item"><a href="https://github.com/Highlander200" class="nav-link px-2 text-body-secondary"><i class="fa fa-github me-1" aria-hidden="true"></i>GitHub</a></li>
-            <li class="nav-item"><a href="https://www.ittgiorgi.edu.it/" class="nav-link px-2 text-body-secondary"><i class="fa fa-graduation-cap me-1" aria-hidden="true"></i>Scuola</a></li>
-            <li class="nav-item"><a href="source.zip" class="nav-link px-2 text-body-secondary"><i class="fa fa-file-code-o me-1" aria-hidden="true"></i>Sorgente</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary"><i
+                        class="fa fa-home me-1" aria-hidden="true"></i></i>Home</a></li>
+            <li class="nav-item"><a href="https://www.instagram.com/_giuseppe.aiello_/"
+                    class="nav-link px-2 text-body-secondary"><i class="fa fa-instagram me-1"
+                        aria-hidden="true"></i>Instagram</a></li>
+            <li class="nav-item"><a href="https://github.com/Highlander200" class="nav-link px-2 text-body-secondary"><i
+                        class="fa fa-github me-1" aria-hidden="true"></i>GitHub</a></li>
+            <li class="nav-item"><a href="https://www.ittgiorgi.edu.it/" class="nav-link px-2 text-body-secondary"><i
+                        class="fa fa-graduation-cap me-1" aria-hidden="true"></i>Scuola</a></li>
+            <li class="nav-item"><a href="source.zip" class="nav-link px-2 text-body-secondary"><i
+                        class="fa fa-file-code-o me-1" aria-hidden="true"></i>Sorgente</a></li>
         </ul>
         <p class="text-center text-body-secondary">Aiello Giuseppe 4DI a.s. 2022/23</p>
         <p class="text-center text-body-secondary">giuseppe.2006@outlook.com</p>
