--- a/room3.html
+++ b/room3.html
@@ -56,7 +56,7 @@
     <div class="content container">
         <h1>Quiz Livello 3</h1>
         <p>Inserisci le risposte per andare alla prossimo livello:</p>
-        <p class="mt-5">Cambiare i propri dispositivi elettronici con frequenza può avere un impatto negativo sull'ambiente, ma il riciclo dell'hardware può aiutare a..</p>
+        <p class="mt-5">Cambiare i propri dispositivi elettronici con frequenza può avere un impatto negativo sull'ambiente, ma il riciclo dell'hardware può aiutare a...</p>
         <div class="input-group">
             <input type="text" class="form-control" id="passcodeInput">
         </div>
