--- a/secret.html
+++ b/secret.html
@@ -50,14 +50,7 @@
     </nav>
 
     <div class="content">
-        <h1>Have you finished the escape room?</h1>
-
-        <div class="input-group mb-3">
-            <span class="input-group-text" id="inputGroup-sizing-default">Insert the password</span>
-            <input type="text" class="form-control" aria-label="Sizing example input"
-                aria-describedby="inputGroup-sizing-default" id="passcode_input">
-            <button class="btn btn-outline-primary" type="button" id="checkInput">Button</button>
-        </div>
+        <h1>Ecco le mie riflessioni personali:</h1>
     </div>
 
 
