--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </div>
 
 
-    <footer class="fixed-bottom py-3 pt-5">
+    <footer class="py-3 pt-5">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary"><i
                         class="fa fa-home me-1" aria-hidden="true"></i></i>Home</a></li>
