--- a/room1.html
+++ b/room1.html
@@ -90,22 +90,26 @@
     <script src="./scripts/main.js"></script>
     <script src="./scripts/room1.js"></script>
 
-    <footer class="fixed-bottom py-3 pt-5">
-        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary"><i
-                        class="fa fa-home me-1" aria-hidden="true"></i></i>Home</a></li>
-            <li class="nav-item"><a href="https://www.instagram.com/_giuseppe.aiello_/"
-                    class="nav-link px-2 text-body-secondary"><i class="fa fa-instagram me-1"
-                        aria-hidden="true"></i>Instagram</a></li>
-            <li class="nav-item"><a href="https://github.com/Highlander200" class="nav-link px-2 text-body-secondary"><i
-                        class="fa fa-github me-1" aria-hidden="true"></i>GitHub</a></li>
-            <li class="nav-item"><a href="https://www.ittgiorgi.edu.it/" class="nav-link px-2 text-body-secondary"><i
-                        class="fa fa-graduation-cap me-1" aria-hidden="true"></i>Scuola</a></li>
-            <li class="nav-item"><a href="source.zip" class="nav-link px-2 text-body-secondary"><i
-                        class="fa fa-file-code-o me-1" aria-hidden="true"></i>Sorgente</a></li>
-        </ul>
-        <p class="text-center text-body-secondary">Aiello Giuseppe 4DI a.s. 2022/23</p>
-        <p class="text-center text-body-secondary">giuseppe.2006@outlook.com</p>
+    <footer class="nav justify-content-center pb-3 mt-5">
+        <div class="footer">
+            <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary"><i
+                            class="fa fa-home me-1" aria-hidden="true"></i></i>Home</a></li>
+                <li class="nav-item"><a href="https://www.instagram.com/_giuseppe.aiello_/"
+                        class="nav-link px-2 text-body-secondary"><i class="fa fa-instagram me-1"
+                            aria-hidden="true"></i>Instagram</a></li>
+                <li class="nav-item"><a href="https://github.com/Highlander200"
+                        class="nav-link px-2 text-body-secondary"><i class="fa fa-github me-1"
+                            aria-hidden="true"></i>GitHub</a></li>
+                <li class="nav-item"><a href="https://www.ittgiorgi.edu.it/"
+                        class="nav-link px-2 text-body-secondary"><i class="fa fa-graduation-cap me-1"
+                            aria-hidden="true"></i>Scuola</a></li>
+                <li class="nav-item"><a href="source.zip" class="nav-link px-2 text-body-secondary"><i
+                            class="fa fa-file-code-o me-1" aria-hidden="true"></i>Sorgente</a></li>
+            </ul>
+            <p class="text-center text-body-secondary"><i class="fa fa-user me-1" aria-hidden="true"></i>Aiello Giuseppe 4DI a.s. 2022/23</p>
+            <p class="text-center text-body-secondary">giuseppe.2006@outlook.com</p>
+        </div>
     </footer>
 
 
